# surface_detection

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
include/: inverse.h
include/manipulability/: inverse.h
launch/: detection.launch.py
manipulability/: aruco_depth_viewer.py  aruco_detect.py  aruco_global_pose_node.py  test_publisher.py
src/: inverse.cpp  joint_state_listener.cpp
surface_detection/: banana.py  capsule_pointcloud.py  depth_pixel_reader.py  extract_pointcloud.py  simple_2detect.py  test_publisher.py  wrist_position_node.py
